--- a/hosting/nginx/nginx.conf
+++ b/hosting/nginx/nginx.conf
@@ -35,4 +35,14 @@ server {
         proxy_pass http://127.0.0.1:4000;
         proxy_redirect off;
     }
+
+    error_page 502 /maintenance.html;
+    location = /maintenance.html {
+        root   /var/www/absolventenfeier;
+    }
+
+    error_page 501 503 /503.html;
+    location = /503.html {
+        root   /var/www/absolventenfeier;
+    }
 }
