--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,4 +18,4 @@ jobs:
       run: docker build --pull -t docker.pkg.github.com/fs-wiwi-ms/absolventenfeier/absolventenfeier .
     - name: push-image-master
       run: docker push docker.pkg.github.com/fs-wiwi-ms/absolventenfeier/absolventenfeier
-      if: github.ref == 'refs/heads/master'
+      if: github.ref == 'refs/heads/prod'
