add mollie, orders, tickets. restrict registration and ordering to the respective timeslots

--- a/assets/static/manifest.json
+++ b/assets/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Klausurarchiv",
-  "short_name": "Klausurarchiv",
+  "name": "Absolventenfeier",
+  "short_name": "Absolventenfeier",
   "icons": [{
     "src": "/images/icons/128.png",
       "sizes": "128x128",
