--- a/assets/package.json
+++ b/assets/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.2",
     "bulma": "^0.8.0",
+    "bulma-divider": "^0.2.0",
     "bulma-tooltip": "^3.0.2",
     "flatpickr": "^4.6.3",
     "phoenix": "^1.4.15",
@@ -20,11 +21,11 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
-    "file-loader": "^5.0.0",
+    "file-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "prettier": "^1.18.2",
+    "prettier": "^2.0.0",
     "sass-loader": "^8.0.0",
     "ts-loader": "^6.2.1",
     "tslint": "^6.0.0",
