--- a/docker-compose.user.yml
+++ b/docker-compose.user.yml
@@ -6,5 +6,5 @@ services:
         ports:
           - 8080:8080
         environment:
-          ADMINER_DEFAULT_SERVER: localhost
+          ADMINER_DEFAULT_SERVER: db
           ADMINER_DESIGN: pepa-linha
