--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -16,6 +16,7 @@ services:
     environment:
       DATABASE_URL: "psql://absolventenfeier:absolventenfeier@db/absolventenfeier"
       SECRET_KEY_BASE: vmOZLCImcoi+PBCMC/N6BnQ8t6LmSRyONqK3T0iNSV9hx2pt7502lV2mN2alVAFe
+      MOLLIE_API_KEY: test_b6Vkb4GQRhaDafGgJHferuWcGdVRpm
     ports:
       - "4000:4000"
 
