--- a/assets/package.json
+++ b/assets/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/fontawesome-free": "^5.11.2",
     "bulma": "^0.8.0",
     "bulma-divider": "^0.2.0",
+    "bulma-steps": "^2.2.1",
     "bulma-tooltip": "^3.0.2",
     "flatpickr": "^4.6.3",
     "phoenix": "^1.4.15",
