--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -6,14 +6,24 @@ jobs:
     name: Push Docker image to GitHub Packages
     runs-on: ubuntu-latest
     steps:
+      - name: Login to GitHub Packages Docker Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.PAT }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: Check out the repo
         uses: actions/checkout@v2
-      - name: Push to GitHub Packages
-        uses: docker/build-push-action@v1
+      - name: Build and push
+        uses: docker/build-push-action@v2
         with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: fs-wiwi-ms/absolventenfeier/absolventenfeier
-          tag_with_ref: true
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64 #,linux/arm64,linux/386
+          push: true
+          tags: fs-wiwi-ms/absolventenfeier:latest
         if: github.ref == 'refs/heads/production'
