--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -27,3 +27,12 @@ jobs:
           push: true
           tags: ghcr.io/fs-wiwi-ms/absolventenfeier:latest
         if: github.ref == 'refs/heads/production'
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64 #,linux/arm64,linux/386
+          push: true
+          tags: ghcr.io/fs-wiwi-ms/absolventenfeier:master
+        if: github.ref == 'refs/heads/master'
