--- a/hosting/docker-compose.yml
+++ b/hosting/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.4"
 
 services:
   app:
-    image: docker.pkg.github.com/fs-wiwi-ms/absolventenfeier/absolventenfeier
+    image: ghcr.io/fs-wiwi-ms/absolventenfeier:master
     depends_on:
       - db
     ports:
