--- a/assets/package.json
+++ b/assets/package.json
@@ -13,6 +13,7 @@
     "bulma-o-steps": "^1.1.0",
     "bulma-switch": "^2.0.0",
     "bulma-tooltip": "^3.0.2",
+    "compression-webpack-plugin": "^8.0.1",
     "flatpickr": "^4.6.3",
     "phoenix": "^1.4.15",
     "phoenix_html": "^2.13.2"
