--- a/assets/package.json
+++ b/assets/package.json
@@ -16,7 +16,9 @@
     "compression-webpack-plugin": "^8.0.1",
     "flatpickr": "^4.6.3",
     "phoenix": "^1.4.15",
-    "phoenix_html": "^2.14.3"
+    "phoenix_html": "^3.2.0",
+    "phoenix_live_view": "^0.17.9",
+    "topbar": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
